--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -87,6 +87,8 @@
 
     Apache Spark is a distributed processing technology developed in Scala by Databricks that represents the next step of Apache Hadoop. It includes the best parts of it, such as the Hadoop File System, but under a complete new paradigm that allows operations different from the famous map-reduce, using RAM as storage for results rather than writing to disk, lazy and optimized execution of tasks, and special focus on Machine Learning and SQL-like language, to mention some of the main features.
 
+    The use of a distributed processing framework is not strictly necessary in this case, as the community to be analyzed is not that big, but is a good starting point to check the use of SystemML and Spark to make later analysis on a bigger network.
+
   \subsubsection{Apache SystemML}
 
     Recently included in the Apache Foundation Incubating  program, Apache SystemML is a machine learning library that works over distributed frameworks, Spark or Hadoop, written in Java.
@@ -99,19 +101,21 @@
   \subsection{The Stackexchange data}
   \label{subsec:data_structure}
 
-    \subsubsection{Stack Exchange}
+    % \subsubsection{Stack Exchange}
 
-    Stack Exchange is a network of Q\&A websites created in 2009 after the great success the creators obtained with \emph{Stack Overflow} community in 2008, a Q\&A community website for computer programming.
+    Stack Exchange is a network of Q\&A websites created in 2009 after the great success of \emph{Stack Overflow} in 2008, a Q\&A community website for computer programming.
 
-    Each community covers a different topic, from physics to software, and is structured in a reputation award format. Each site has questions, answers and users, all subjected to this reputation award process.
+    Every question and answer, an all the contents of the communities are licensed under a \emph{Creative Commons Attribution-ShareAlike 3.0 Unported}, so the knowledge is free to be shared with others.
 
-    All these communities generate large amounts of data, data thet Stackexchange facilitates every once in a while for data scientists and people in general to download and analyze. The data is available in a torrent file and each package has about 35 - 40 GB of compressed information.
+    Each community covers a different topic, from physics to software, and is structured in a reputation award format, each user's question and answer can be voted positively or negatively. This feature allows the self administration of the communities, which makes posible the existence of the network, as it is so big that an administrator or moderator could not manage. Whenever moderation is needed, for example when there is an argument, there is a specific place on each community to solve these problems, the Meta section, where the users post settle the disputes to be solved by administrators of the site. The reputation system works as gamification, giving users privileges and functionalities when they earn experience points.
+
+    All these communities generate large amounts of data that Stackexchange facilitates every once in a while for data scientists and people in general to download and analyze. The data is available in a torrent file and each package has about 35 - 40 GB of compressed information.
 
     This compressed file has data from different communities for a certain period of time. In this case, the analysis is done over the Scifi community, which is a median size community for science-fiction Q\&A.
 
     \subsubsection{Scifi community}
 
-    Scifi is a community in Stack Exchange that focuses on science fiction and fantasy. This community was selected because it has a medium size which is perfect to test the mentioned technologies in a reasonable period of time. Selecting just the data from Scifi community from the big compressed file, it weights around 110 MB in a 7z compressed format. This allows the computation on a local machine for experimentation and then scale the problem to a bigger community such as \emph{Ask Ubuntu} or \emph{Stack Overflow} when the process is refined and it can be launched remotely in a cluster, as the data structure is common to al other communities. The data is divided in 8 files, regarding different information:
+    Scifi is a community in Stack Exchange that focuses on science fiction and fantasy. This community was selected because it has a medium size which is perfect to test the mentioned technologies in a reasonable period of time. Selecting just the data from Scifi community from the big compressed file, it weights around 110 MB in a 7z compressed format. This allows the computation on a local machine for experimentation and then scale the problem to a bigger community such as \emph{Ask Ubuntu} or \emph{Stack Overflow} when the process is refined and it can be launched remotely in a cluster. The data is divided in 8 files, and has the same structure for every community:
 
     \begin{table}[!h]
       \centering
@@ -119,7 +123,7 @@
         \hline
 
         File & Description & Size \\ \hline
-        Votes.xml & Voting results for each question and more cosas & 84,1 MB \\ \hline
+        Votes.xml & Voting results for each question and answer & 84,1 MB \\ \hline
         Tags.xml & Relational table for tags on each question & 169 KB \\ \hline
         Users.xml & Users on the net & 16,7 MB \\ \hline
         PostLinks.xml & links to posts & 1,5 MB \\ \hline
@@ -331,11 +335,11 @@
 
   \subsection{Main Objectives}
 
-    The main objective of this study is to test the scalability and integration of the proposed technologies, Spark, SystemML and Jupyter Notebook in the usecase of Stack Exchange communities, so further data analysis can be performed. This main goal is divided in three major goals:
+    The main objective of this study is to test the scalability and integration of the proposed technologies, Spark, SystemML and Jupyter Notebook in the usecase of Stack Exchange communities, so further data analysis can be performed. This main goal is divided in three major objectives:
 
     \begin{itemize}
 
-      \item Use Spark to make the data cleaning to create a script for further research on the Stackexchange site.
+      \item Use Spark to make the data cleaning and create a script for further research on the Stackexchange site.
 
       \item Verify SystemML integration with Spark for further research and scalability.
 
@@ -348,11 +352,11 @@
 \section{Technologies}
   \label{sec:technologies}
 
-  The downloaded data from Stackexchange for the analysis weights about 40 GB, which is enough amount to consider distributed processing. Going down to the distributed processing frameworks, Apache Spark was chosen
+  The downloaded data from Stackexchange for the analysis weights about 40 GB, which is enough amount to consider distributed processing. Going down to the distributed processing frameworks, Apache Spark was chosen.
 
   \subsection{Apache Spark}
 
-    Apache Spark is a fast and general-purpose cluster computing system, widely used for data processing. It provides high-level APIs in Java, Scala, Python and R, and an optimized engine that supports general execution graphs. It also supports a rich set of higher-level tools including Spark SQL for SQL and structured data processing, MLlib and SparkML for machine learning and pipelines, GraphX for graph processing, and Spark Streaming.
+    Apache Spark is a fast and general-purpose cluster computing framework, widely used for data processing. It provides high-level APIs in Java, Scala, Python and R, and an optimized engine that supports general execution graphs. It also supports a rich set of higher-level tools including Spark SQL, a SQL-like language prepared for both SQL and NoSQL databases, MLlib and SparkML for machine learning and pipelines, GraphX for graph processing, and Spark Streaming.
 
     This distributed data processing framework was initially developed at the University of California, Berkeley's AMPLab, and donated to the Apache Software Foundation in February 2014, the first release was on May 30th 2014.
 
@@ -363,18 +367,48 @@
       \item It is very slow to write each iteration to disk, which, for example makes difficult to use Hadoop to process streaming.
       \item Apache Hadoop's support for iterative jobs and Machine Learning restricts it's use for this task.
       \item Apache Hadoop's SQL tools doesn't work well on complex queries, sometimes it doesn't work at all and other times it is quite slow as it writes on HDD each iteration.
+      \item Streaming functionality is not supported
     \end{itemize}
 
     Some solutions Apache Spark provides to these problems are:
 
     \begin{itemize}
-      \item Lazy computation, Spark only executes a set of tasks when a result is required. This gives the opportunity to optimize jobs before executing them.
+      \item Lazy computation, Spark only executes a set of tasks when a result is required. This gives the opportunity to optimize jobs before executing them, even at physical level the queries to the data are optimized.
       \item In-memory data caching, Spark scans HDD only once to read the input data and then uses RAM as much as it can, which is faster than scanning disk on every step.
-      \item
+      \item Specific Machine Learning libraries, Spark ML and Spark MLlib, including numerous algorithms prepared to run in a distributed mode.
+      \item Spark SQL provides structured (SQL-like) query language for structured and not structured data in SQL or Dataframe API. One of the advantages of this library is the unified access to datastores with the same language, it even provides SQL functionality with streaming data.
+      \item Spark Streaming library allows users to process streaming data using microbatches
     \end{itemize}
 
-    \subsubsection{Spark Data Structure}
 
+
+    \subsubsection{Apache Spark Data Structure}
+
+      \subsubsection*{RDDs}
+
+        Apache Spark started with just one data structure, the RDDs. The RDD responds to Resilient Distributed Dataset, and have the following properties:
+
+        \begin{itemize}
+          \item Resilient: an RDD can be computed again in case of failure
+          \item Distributed: the RDD can be partitioned and distributed over nodes, to parallelize the works
+          \item Immutable: an RDD can not be modified, instead, a transformation is applied and other RDD is generated
+          \item Lazy: RDDs represent a result of a series of operations and transformations over data, but it does not trigger any operation
+          \item Statically typed: the values in the RDD are typed
+        \end{itemize}
+
+      \subsubsection*{Dataframes}
+
+        Dataframes are distributed collections structured in named columns, the idea is similar to the R dataframes. Dataframes are part of the Spark SQL API and are built up from RDDs, it is a higher level of data structure, which means that can take advantage of Catalyst to optimize the queries.
+
+      \subsubsection*{Datasets}
+
+        Datasets are similar to dataframes, but also taking the static typing of the RDDs, combining the best of the two data structures.
+
+        This static typing allows datasets to use Tungsten, Spark's optimized memory engine. Tungsten has direct access to off heap memory, to provide even better optimization, and uses data types to minimize the encoding and decoding of the data.
+
+      \subsubsection*{Graphframes}
+
+        Graphframes are structures used for graph storage and operations. Graphframes are composed by two dataframes, the first one contains all the vertices and the second one contains all the edges. This is useful as dataframes can be optimized by Catalyst.
 
 
 
@@ -382,29 +416,42 @@
 
       Spark has a master-slave architecture and supports various resource managers: standalone, Mesos and YARN. The resource manager will only be in charge of identify the resources. Independently of the resource manager chosen, the Apache Spark architecture doesn't change.
 
-      All Spark processes share the same architecture, the driver process takes care of calculating the job's parallelism and calculates every job's stage. Each stage is divided on a series of tasks, which will be sent to the executors, where will be executed. The communication between the Spark application and the resource manager will be done through a SparkContext.
+      All Spark processes share the same architecture, the driver process takes care of calculating the job's parallelism and calculates every job's stage. Each stage is divided on a series of tasks, which will be sent to the executors to be executed. The communication between the Spark application and the resource manager is done through a SparkContext.
 
       The deployment of Spark has two variants, client and cluster mode. On the client mode, the Driver is launched on the machine the process has been invoked, and it can be inside or outside the cluster. On cluster mode, the cluster manager is assigned to control the Driver process, and the process itself will be launched inside the cluster. In case Mesos is the cluster manager, it will require an additional service.[][][][][][][]
 
       Apache Spark is formed by the Spark Core API, available in R, SQL, Python, Scala and Java languages, and built up on it four main libraries: Spark SQL + DataFrames, Spark Streaming, Spark MLlib, Spark ML and GraphX, that complements functionality for Spark, specially on the parts Hadoop failed, Machine Learning, SQL and Streaming.
 
-
+      These libraries can be imported independently and combined to be used at the same time, for example, Spark SQL can be used in a Streaming environment with Spark Streaming library and this way SQL queries can be launched in
 
       \subsubsection*{Spark Core API}
 
-        The core API represents the basic structure of Spark, it can be addressed form any of the supported languages, scala, python, R and java.
+        The core API represents the basic structure of Spark, it can be addressed from any of the supported languages, scala, python, R and java. This API has the main functionality of Spark, which includes a set of operations, that includes Map-Reduce, but is not limited to them, as Hadoop is.
+        Regarding the data management, This API contains the RDDs, explained above and the basic operations.[][][]
 
       \subsubsection*{Spark SQL + DataFrames}
 
-        The SQL layer over data is known as Spark SQL
+        The SQL layer over data is known as Spark SQL. It allows users to use a SQL-like language in Spark programs, to query both structured and not structured databases (SQL \& NoSQL), such as Postgres or MongoDB.
+
+        The Spark SQL library also provides a main functionality in Spark that is gaining more importance over the time, the Dataframes.
+
+        A Dataframe is a data structure introduced in the R programming language that has extended to the Data Science world as one of the most easy to use data structures. Dataframes in Spark are the same concept that in a non-distributed processing framework, but the implementation, as it is for a distributed environment is different, it is built from RDDs with a specific structure.
 
       \subsubsection*{Spark MLlib + Spark ML}
 
         Spark has two main Machine Learning libraries, the first one, Spark MLlib, which is the basic library, that includes the main algorithms and is addressed with RDDs, the second one, Spark ML, which uses Spark MLlib but through DataFrames, and includes further functionality, such as Pipelines, a set of operations performed over data, that allows the user to build sequences of actions over Data Frames.
 
+      \subsubsection{Spark Streaming}
+
+        The streaming processing library of Spark
+
+
       \subsubsection*{Spark GraphX}
 
-        GraphX is Spark's graph library, which is used to interact with graphs.
+        GraphX is Spark's graph library
+
+      \subsubsection{Apache Spark workflow}
+      DAGS Y ESAS COSAS>>>>>>>>>>>>>>>>>
 
 
 
