--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -1,19 +1,38 @@
 @article{tungsten_databricks,
-  author =       "by Reynold Xin and Josh Rosen ",
-  title =        "{Project Tungsten: Bringing Apache Spark Closer to Bare Metal}. ({English})",
-  journal =      "Databricks Blog",
-  year =         "2015",
-  month =        "April",
-  day =          "28",
-  DOI =          "https://databricks.com/blog/2015/04/28/project-tungsten-bringing-spark-closer-to-bare-metal.html",
+  author    = {Reynold Xin and Josh Rosen},
+  title     = {Project Tungsten: Bringing Apache Spark Closer to Bare Metal},
+  journal   = {Databricks Blog},
+  year      = {2015},
+  month     = {April},
+  day       = {28},
+  DOI       = {https://databricks.com/blog/2015/04/28/project-tungsten-bringing-spark-closer-to-bare-metal.html}
 }
 @book{big_data_analytics_spark,
-  author = {Mohammed Guller},
-  title = {Big Data Analytics with Spark},
-  year = {2015},
+  author    = {Mohammed Guller},
+  title     = {Big Data Analytics with Spark},
+  year      = {2015},
   publisher = {Springer Science+Business Media New York},
-  isbn = {978-1-4842-0964-6}
+  isbn      = {978-1-4842-0964-6}
 }
+@book{survival_analysis_book,
+  author    = {Melinda Mills},
+  title     = {Introducing Survival And Event History Analysis},
+  year      = {2011},
+  publisher = {SAGE Publications, Ltd},
+  isbn      = {978-84860-102-4}
+}
+@online{spark_documentation,
+  title     = {Apache Spark Official Documentation},
+  url       = {https://spark.apache.org/docs/2.1.0/}
+}
+@online{systemml_documentation,
+  title     = {Apache SystemML Official Documentation},
+  url       = {https://systemml.apache.org/}
+}
+
+
+
+
 
 @article{einstein,
     author =       "Albert Einstein",
