--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -451,7 +451,17 @@
 
       \subsubsection*{Graphframes}
 
-        Graphframes are structures used for graph storage and operations. Graphframes are composed by two dataframes, the first one contains all the vertices and the second one contains all the edges. This is useful as dataframes can be optimized by Catalyst.
+        Graphframes are structures used for graph storage and operations. Graphframes are composed by two dataframes, the first one contains all the vertices and the second one contains all the edges. This is useful as dataframes can be optimized by Catalyst. GraphFrames are not part of the Apache Spark core API, as there is still development to do.
+
+      \subsubsection*{Discretized Streams}
+        Discretized Streams, or DStreams, are the basic data structure that Spark Streaming module uses for processing. This DStreams are essentially RDDs in time periods, and represent the data available on each time window. As Spark Streaming works with microbatches, small (or not so small) time intervals of data processing. For a time period, a DStream is basically an RDD, on which operations can be performed giving as a result another temporary RDD or DStream.
+
+      \begin{figure}[!h]
+        \centering
+        \includegraphics[width=0.75\textwidth]{streaming-dstream.png}
+        \caption{DStream structure, from \cite{spark_documentation}}
+        \label{img:DStream_squema}
+      \end{figure}
 
       \subsubsection*{Catalyst and Tungsten}
 
@@ -495,7 +505,20 @@
 
       \subsubsection{Spark Streaming}
 
-        The streaming processing library of Spark
+        Spark Streaming is the real-time, streaming processing library of Spark. Unlike other streaming processing frameworks such as Apache Flink, Spark Streaming works with microbatches, remaining almost the same structure as Spark itself. The reason is to have the workers processing in time periods, this way the fault tolerance is more robust, as for each microbatch all the operations will be parallelized, and in case any worker falls down, the others complete the work. This way the latency is sacrificed in favor of robustness of fault tolerance.
+
+        Spark Streaming runs on top of Spark, so that the benefits of the distribution, scalability and fault-tolerance are inherited from it, but it also has the advantage of using a similar sintaxis and the interoperability with other Spark libraries such as Spark-SQL, giving the possibility to process information with dataframes, with all the advantages they provide.
+
+        Spark Streaming has support for numerous data stream sources, including Apache Kafka, ZeroMQ, TCP Socket or Flume, among others, this gives flexibility to the framework to connect to different applications.
+
+        The workflow in Spark Streaming is the following: data enters at unspecified rate, it can be a specific amount every second or not a constant quantity, Spark Streaming will be in charge of distributing the data along the workers. Data is transformed into DStreams and distributed at a low level into RDDs, using the Spark Core functionalities, processed, and then returned to the microbatch. At the end of the microbatch, the application will return the processed data in DStreams. The schema below is a diagram of the explained workflow.
+
+        \begin{figure}[!h]
+          \centering
+          \includegraphics[width=0.75\textwidth]{Spark_Streaming_architecture.png}
+          \caption{Spark Streaming workflow}
+          \label{img:spark_streaming_workflow}
+        \end{figure}
 
 
       \subsubsection*{Spark GraphX}
@@ -504,6 +527,8 @@
 
       \subsubsection{Apache Spark workflow}
       DAGS Y ESAS COSAS>>>>>>>>>>>>>>>>>
+
+      \subsubsection{Spark UI}
 
 
 
@@ -703,7 +728,7 @@
   \subsection{Lessons learnt}
 
 \newpage
-\nocite{tungsten_databricks, big_data_analytics_spark, survival_analysis_book, spark_documentation, systemml_documentation}
+\nocite{*}
 \printbibliography
 
 \end{document}
