--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -33,45 +33,7 @@
   title     = {Apache Spark : RDD vs DataFrame vs Dataset [Chandan Prakash's Blog]},
   url       = {https://http://why-not-learn-something.blogspot.com.es/}
 }
-
-
-
-
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-    [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
-    number =       "10",
-    pages =        "891--921",
-    year =         "1905",
-    DOI =          "http://dx.doi.org/10.1002/andp.19053221004",
-    keywords =     "physics"
-}
-
-@book{dirac,
-    title={The Principles of Quantum Mechanics},
-    author={Paul Adrien Maurice Dirac},
-    isbn={9780198520115},
-    series={International series of monographs on physics},
-    year={1981},
-    publisher={Clarendon Press},
-    keywords = {physics}
-}
-
-@online{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    keywords  = "latex,knuth"
-}
-
-@inbook{knuth-fa,
-    author = "Donald E. Knuth",
-    title = "Fundamental Algorithms",
-    publisher = "Addison-Wesley",
-    year = "1973",
-    chapter = "1.2",
-    keywords  = "knuth,programming"
+@online{https://databricks.com/blog/2016/03/03/introducing-graphframes.html,
+  title     = {Introducing GraphFrames},
+  url       = {https://databricks.com/blog/2016/03/03/introducing-graphframes.html}
 }
