--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -7,6 +7,14 @@
   day       = {28},
   DOI       = {https://databricks.com/blog/2015/04/28/project-tungsten-bringing-spark-closer-to-bare-metal.html}
 }
+@article{systemml_paper,
+  author    = {M. Boehm and D. R. Burdick et al},
+  title     = {SystemML’s Optimizer: Plan Generation for Large-Scale Machine Learning Programs},
+  journal   = {Bulletin of the IEEE Computer Society Technical Committee on Data Engineering},
+  year      = {2014},
+  url       = {http://researcher.ibm.com/researcher/files/us-ytian/p52.pdf}
+}
+
 @book{big_data_analytics_spark,
   author    = {Mohammed Guller},
   title     = {Big Data Analytics with Spark},
@@ -21,6 +29,8 @@
   publisher = {SAGE Publications, Ltd},
   isbn      = {978-84860-102-4}
 }
+
+
 @online{spark_documentation,
   title     = {Apache Spark Official Documentation},
   url       = {https://spark.apache.org/docs/2.1.0/}
@@ -33,7 +43,15 @@
   title     = {Apache Spark : RDD vs DataFrame vs Dataset [Chandan Prakash's Blog]},
   url       = {https://http://why-not-learn-something.blogspot.com.es/}
 }
-@online{https://databricks.com/blog/2016/03/03/introducing-graphframes.html,
+@online{graphFrames_introduction,
   title     = {Introducing GraphFrames},
   url       = {https://databricks.com/blog/2016/03/03/introducing-graphframes.html}
+}
+@online{systemml_spark_summit_2016,
+  title     = {Inside Apache SystemML [Spark Summit talk]},
+  url       = {https://www.youtube.com/watch?v=n3JJP6UbH6Q}
+},
+@online{systemml_github_page,
+  title     = {Apache SystemML Github Repository},
+  url       = {https://github.com/apache/systemml}
 }
